Tests expanded a little. Two new scenarios "covered". One of them "fixed". Still no nested blocks though, that's why I use quotes.

--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -58,7 +58,7 @@
                     </dependency>
                 </dependencies>
                 <configuration>
-                    <argLine>-javaagent:../agent/target/finally4j-agent-${revision}.jar</argLine>
+                    <argLine>-javaagent:../agent/target/finally4j-agent-${revision}.jar -Dfinally4j.debug=true</argLine>
                 </configuration>
             </plugin>
             <plugin>
