Some loops replaced with streams. Few comments added.

--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -31,6 +31,8 @@
             <version>${revision}</version>
             <scope>compile</scope>
         </dependency>
+
+        <!-- Test dependencies. -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
